# ama-riscv-sim

./: .gitattributes  .gitignore  .gitmodules  README.md  binutils.patch  gcc-14.patch  pyproject.toml
examples/: ama-riscv-sim.help  dhrystone.elf  get_call_graph.help  hw_model_sweep.help  rf_usage.help  run_analysis.help
script/: README.md  analysis.ipynb  analysis_all.py  analyze_profiling_log.py  annotate_exec_log.py  branch_analysis.py  check_build_matrix.py  crosscheck_imperas.py  dep_scan.py  dhry_calc.py  draw_hw.py  embench_get_results.py  exp_sweep.sh  get_call_graph.py  get_flamegraph.py  hw_model_sweep.py  hw_model_sweep_params.json  hw_model_sweep_params_bp.json  hw_model_sweep_params_bp_guided.json  hw_model_sweep_params_bp_guided_focused.json  hw_model_sweep_params_caches.json  hw_perf_est.py  hw_perf_est_corr.py  hw_perf_est_uarch.yaml  hw_perf_metrics.json  hw_perf_metrics_v2.json  hw_perf_metrics_v2.yaml  icache_static_analysis.py  loop_run.py  loop_run_config_act_rv32im.yaml  loop_run_config_act_rv32imc.yaml  loop_run_config_benchmark.yaml  perf_est.py  perf_est_corr.py  perf_est_v2.py  plot_reg_hist.py  plot_rf_usage.py  prof_stats.py  rf_usage.py  run_analysis.py  (+9 more)
src/: .gitignore  Makefile  Makefile.autogen  Makefile.autogen.mk  Makefile.isa_sim_sources.mk  README.md  arg_parse.h  bp.cpp  bp.h  build_info.h  cache.cpp  cache.h  cache_stats.h  core.cpp  core.h  core_exec_b.cpp  core_exec_c.cpp  core_exec_custom_simd.h  core_exec_custom_simd_arith.cpp  core_exec_custom_simd_arith_add_sub.cpp  core_exec_custom_simd_arith_dot.cpp  core_exec_i_arith.cpp  (+40 more)
(+679 files in other folders)
